# PiSpy

./: README.md  humiture.py  pispy-humiture-client.py  pispy-main.py  pispy-test.py  serialNumber.py
PiSpy.Client/: pispy-main.py  pispy-test.py  serialNumber.py
PiSpy.Client/audio/: a.out  microPhone.c.swp
PiSpy.Client/cam/: CMakeLists.txt  camera.h  cmake_install.cmake  picam  picam.cpp
PiSpy.Client/humiture/: DHT.out
PiSpy.Client/old/cam/: CMakeCache.txt  Makefile  camera.cpp
PiSpy.Client/old/cam2/: CMakeLists.txt  Makefile  cameracontrol.h  cmake_install.cmake  picam.cpp  picamdemo
PiSpy.Client/old/code/: split_stream.py
PiSpy.Client/old/opencv/: a.out  libs.txt  program.cpp
PiSpy.Client/transmission/: cloud_client.py
PiSpy.Server/: PiSpy.Server.sln
PiSpy.Server/PiSpy.Server/: PiSpy.Server.ccproj  ServiceConfiguration.Cloud.cscfg  ServiceConfiguration.Local.cscfg  ServiceDefinition.csdef
PiSpy.Server/PiSpy.Server/Profiles/: PiSpyProduction.azurePubxml
PiSpy.Server/WebRole1/: Global.asax.cs  WebRole1.csproj
PiSpy.Server/WebRole1/App_Start/: IdentityConfig.cs
PiSpy.Server/WebRole1/Controllers/: AccountController.cs  DataController.cs  HomeController.cs  ManageController.cs  (+3 more)
PiSpy.Server/WorkerRole1/: BlobHelper.cs  Listener.cs  SqlHelper.cs  TcpStreamReader.cs  WorkerRole.cs  WorkerRole1.csproj  packages.config
audio/: microPhone.c
cam/: CMakeLists.txt  picam.cpp
cam2/: CMakeCache.txt  CMakeLists.txt  picam.cpp
camera/: stream.py
code/: cloud_client.py  read_sensors.py
microphone/: improve_pcm_quality.py  microPhone.c
(+117 files in other folders)
